Add @import url('https://fonts.googleapis.com/css?family=Barlow:100,200,300,400,500,600,700,800,900');

--- a/Customer/onestepmode.html
+++ b/Customer/onestepmode.html
@@ -25,8 +25,8 @@
             <a class="navbar-brand" href="/index.html">
                 <img src="../assets/images/logo.png" height="70" alt="">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-                aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -39,8 +39,7 @@
                         <a class="nav-link text-dark" href="#">Who we are</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link text-dark " href="singup.html"><span
-                                class="nz-btn-gold py-0 my-2 px-2">Account</span></a>
+                        <a class="nav-link text-dark " href="singup.html"><span class="nz-btn-gold py-0 my-2 px-2">Account</span></a>
                     </li>
                     <li class="nav-item mx-3 ">
                         <a class="nav-link text-dark" href="/index.html">Log out </a>
@@ -48,15 +47,13 @@
                     </li>
                     <li class="nav-item mx-3">
                         <div class="dropdown">
-                            <button class="btn btn-link dropdown-toggle text-uppercase text-dark" type="button"
-                                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                            <button class="btn btn-link dropdown-toggle text-uppercase text-dark" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">
                                 <img src="../assets/images/us.svg" width="30" class="mr-1" alt="">
                                 Eng
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item text-uppercase text-dark" href="index_ar.html"><img
-                                        src="../assets/images/sa.svg" width="30" class="mr-1" alt=""> Arabic</a>
+                                <a class="dropdown-item text-uppercase text-dark" href="index_ar.html"><img src="../assets/images/sa.svg" width="30" class="mr-1" alt=""> Arabic</a>
                                 <a class="dropdown-item text-uppercase text-dark" href="#">
                                     <img src="../assets/images/es.svg" width="30" class="mr-1" alt="">
                                     Spanish</a>
@@ -98,8 +95,7 @@
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow py-4">
-                <h1 class="section-title-side"><span>Translation - <span class="font-weight-light">Easy
-                            Mode</span></h1>
+                <h1 class="section-title-side">Easy Mode</h1>
                 <form>
                     <div class="form-group">
                         <div class="custom-file">
@@ -113,8 +109,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-lg-4 offset-lg-8">
-                            <a href="placeOrderSuccess.html"
-                                class="btn nz-btn-gold btn-block  text-uppercase font-weight-bold">Submit Order</a>
+                            <a href="placeOrderSuccess.html" class="btn nz-btn-gold btn-block  text-uppercase font-weight-bold">Submit Order</a>
                         </div>
                     </div>
                 </form>
