--- a/Customer/multistepmode.html
+++ b/Customer/multistepmode.html
@@ -117,14 +117,14 @@
                                 </span>
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" id="stamp-tab" data-toggle="tab" href="#stamp" role="tab" aria-controls="stamp" aria-selected="false">
                                 <i class="d-block fa-2x mb-2 fas fa-stamp"></i>
                                 <span>
                                     Stamp
                                 </span>
                             </a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" id="deliveryTime-tab" data-toggle="tab" href="#deliveryTime" role="tab" aria-controls="deliveryTime" aria-selected="false">
                                 <i class="d-block fa-2x mb-2 fas fa-business-time"></i>
@@ -216,7 +216,7 @@
                             </div>
 
                         </div>
-                        <div class="tab-pane fade" id="stamp" role="tabpanel" aria-labelledby="stamp-tab">
+                        <!-- <div class="tab-pane fade" id="stamp" role="tabpanel" aria-labelledby="stamp-tab">
                             <div class="container">
 
                                 <div class="row">
@@ -248,7 +248,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="tab-pane fade" id="deliveryTime" role="tabpanel" aria-labelledby="deliveryTime-tab">
                             <div class="btn-group d-flex flex-wrap flex-row p-0 justify-content-center" role="group" aria-label="Basic example">
                                 <button class="btn btn-outline-warning m-2 "><span>Today</span></button>
