--- a/Customer/onestepmode.html
+++ b/Customer/onestepmode.html
@@ -95,7 +95,8 @@
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow py-4">
-                <h1 class="section-title-side">Easy Mode</h1>
+                <h1 class="section-title-side"><span>Translation - <span class="font-weight-light">Advanced
+                            Mode</span></h1>
                 <form>
                     <div class="form-group">
                         <div class="custom-file">
