--- a/Customer/orderDetails.html
+++ b/Customer/orderDetails.html
@@ -388,7 +388,7 @@
                                     <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
                                     <small>3 days ago</small>
                                 </div>
-                                <p class="mb-1">10 Hours</p>
+                                <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                 <div class="d-flex w-100 justify-content-end">
                                     <a class="btn nz-btn-gold btn-sm" px-2 role="button" data-toggle="collapse"
                                         data-target="#collapseBid1" aria-expanded="false"
@@ -409,7 +409,7 @@
                                     <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
                                     <small>3 days ago</small>
                                 </div>
-                                <p class="mb-1">10 Hours</p>
+                                <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                 <div class="d-flex w-100 justify-content-end">
                                     <a class="btn nz-btn-gold btn-sm" px-2 role="button" data-toggle="collapse"
                                         data-target="#collapseBid2" aria-expanded="false"
