--- a/provider/bids.html
+++ b/provider/bids.html
@@ -159,10 +159,10 @@
                                         class="list-group-item list-group-item-action flex-column align-items-start card-hover mb-2 p-2">
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
                                             <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                            <small> 3 days ago </small>
+                                            <small> <strong>Announced </strong> 3 days ago </small>
                                         </div>
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
-                                            <p class="mb-1">10 Hours</p>
+                                            <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                             <p class="mb-1">Translation</p>
                                         </div>
                                         <div class="d-flex w-100 justify-content-end mt-2">
@@ -199,10 +199,10 @@
                                         class="list-group-item list-group-item-action flex-column align-items-start card-hover mb-2 p-2">
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
                                             <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                            <small> 3 days ago </small>
+                                            <small> <strong>Announced </strong> 3 days ago </small>
                                         </div>
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
-                                            <p class="mb-1">10 Hours</p>
+                                            <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                             <p class="mb-1">Translation</p>
                                         </div>
                                         <div class="d-flex w-100 justify-content-end mt-2">
@@ -239,10 +239,10 @@
                                         class="list-group-item list-group-item-action flex-column align-items-start card-hover mb-2 p-2">
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
                                             <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                            <small> 3 days ago </small>
+                                            <small> <strong>Announced </strong> 3 days ago </small>
                                         </div>
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
-                                            <p class="mb-1">10 Hours</p>
+                                            <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                             <p class="mb-1">Translation</p>
                                         </div>
                                         <div class="d-flex w-100 justify-content-end mt-2">
@@ -279,10 +279,10 @@
                                         class="list-group-item list-group-item-action flex-column align-items-start card-hover mb-2 p-2">
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
                                             <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                            <small> 3 days ago </small>
+                                            <small> <strong>Announced </strong> 3 days ago </small>
                                         </div>
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
-                                            <p class="mb-1">10 Hours</p>
+                                            <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                             <p class="mb-1">Translation</p>
                                         </div>
                                         <div class="d-flex w-100 justify-content-end mt-2">
@@ -319,10 +319,10 @@
                                         class="list-group-item list-group-item-action flex-column align-items-start card-hover mb-2 p-2">
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
                                             <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                            <small> 3 days ago </small>
+                                            <small> <strong>Announced </strong> 3 days ago </small>
                                         </div>
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
-                                            <p class="mb-1">10 Hours</p>
+                                            <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                             <p class="mb-1">Translation</p>
                                         </div>
                                         <div class="d-flex w-100 justify-content-end mt-2">
@@ -359,10 +359,10 @@
                                         class="list-group-item list-group-item-action flex-column align-items-start card-hover mb-2 p-2">
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
                                             <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                            <small> 3 days ago </small>
+                                            <small> <strong>Announced </strong> 3 days ago </small>
                                         </div>
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
-                                            <p class="mb-1">10 Hours</p>
+                                            <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                             <p class="mb-1">Translation</p>
                                         </div>
                                         <div class="d-flex w-100 justify-content-end mt-2">
@@ -405,10 +405,10 @@
                                         class="list-group-item list-group-item-action flex-column align-items-start card-hover mb-2 p-2">
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
                                             <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                            <small> 3 days ago </small>
+                                            <small> <strong>Announced </strong> 3 days ago </small>
                                         </div>
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
-                                            <p class="mb-1">10 Hours</p>
+                                            <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                             <p class="mb-1">Translation</p>
                                         </div>
                                         <div class="d-flex w-100 justify-content-between">
@@ -425,10 +425,10 @@
                                         class="list-group-item list-group-item-action flex-column align-items-start card-hover mb-2 p-2">
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
                                             <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                            <small> 3 days ago </small>
+                                            <small> <strong>Announced </strong> 3 days ago </small>
                                         </div>
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
-                                            <p class="mb-1">10 Hours</p>
+                                            <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                             <p class="mb-1">Translation</p>
                                         </div>
                                         <div class="d-flex w-100 justify-content-between">
@@ -444,10 +444,10 @@
                                         class="list-group-item list-group-item-action flex-column align-items-start card-hover mb-2 p-2">
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
                                             <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                            <small> 3 days ago </small>
+                                            <small> <strong>Announced </strong> 3 days ago </small>
                                         </div>
                                         <div class="d-flex w-100 justify-content-between align-items-center ">
-                                            <p class="mb-1">10 Hours</p>
+                                            <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                             <p class="mb-1">Translation</p>
                                         </div>
                                         <div class="d-flex w-100 justify-content-between">
