--- a/provider/dashboad.html
+++ b/provider/dashboad.html
@@ -118,11 +118,11 @@
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
                                                         <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                                        <small> 3 days ago </small>
+                                                        <small> <strong>Announced </strong> 3 days ago </small>
                                                     </div>
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
-                                                        <p class="mb-1">10 Hours</p>
+                                                        <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                                         <p class="mb-1">Translation</p>
                                                     </div>
                                                     <div class="d-flex w-100 justify-content-end mt-2">
@@ -161,11 +161,11 @@
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
                                                         <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                                        <small> 3 days ago </small>
+                                                        <small> <strong>Announced </strong> 3 days ago </small>
                                                     </div>
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
-                                                        <p class="mb-1">10 Hours</p>
+                                                        <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                                         <p class="mb-1">Translation</p>
                                                     </div>
                                                     <div class="d-flex w-100 justify-content-end mt-2">
@@ -204,11 +204,11 @@
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
                                                         <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                                        <small> 3 days ago </small>
+                                                        <small> <strong>Announced </strong> 3 days ago </small>
                                                     </div>
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
-                                                        <p class="mb-1">10 Hours</p>
+                                                        <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                                         <p class="mb-1">Translation</p>
                                                     </div>
                                                     <div class="d-flex w-100 justify-content-end mt-2">
@@ -247,11 +247,11 @@
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
                                                         <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                                        <small> 3 days ago </small>
+                                                        <small> <strong>Announced </strong> 3 days ago </small>
                                                     </div>
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
-                                                        <p class="mb-1">10 Hours</p>
+                                                        <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                                         <p class="mb-1">Translation</p>
                                                     </div>
                                                     <div class="d-flex w-100 justify-content-end mt-2">
@@ -290,11 +290,11 @@
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
                                                         <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                                        <small> 3 days ago </small>
+                                                        <small> <strong>Announced </strong> 3 days ago </small>
                                                     </div>
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
-                                                        <p class="mb-1">10 Hours</p>
+                                                        <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                                         <p class="mb-1">Translation</p>
                                                     </div>
                                                     <div class="d-flex w-100 justify-content-end mt-2">
@@ -333,11 +333,11 @@
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
                                                         <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                                        <small> 3 days ago </small>
+                                                        <small> <strong>Announced </strong> 3 days ago </small>
                                                     </div>
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
-                                                        <p class="mb-1">10 Hours</p>
+                                                        <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                                         <p class="mb-1">Translation</p>
                                                     </div>
                                                     <div class="d-flex w-100 justify-content-end mt-2">
@@ -382,11 +382,11 @@
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
                                                         <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                                        <small> 3 days ago </small>
+                                                        <small> <strong>Announced </strong> 3 days ago </small>
                                                     </div>
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
-                                                        <p class="mb-1">10 Hours</p>
+                                                        <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                                         <p class="mb-1">Translation</p>
                                                     </div>
                                                     <div class="d-flex w-100 justify-content-between">
@@ -419,11 +419,11 @@
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
                                                         <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                                        <small> 3 days ago </small>
+                                                        <small> <strong>Announced </strong> 3 days ago </small>
                                                     </div>
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
-                                                        <p class="mb-1">10 Hours</p>
+                                                        <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                                         <p class="mb-1">Translation</p>
                                                     </div>
                                                     <div class="d-flex w-100 justify-content-between">
@@ -455,11 +455,11 @@
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
                                                         <h5 class="mb-1 nz-pill-gold px-2">500 EGP</h5>
-                                                        <small> 3 days ago </small>
+                                                        <small> <strong>Announced </strong> 3 days ago </small>
                                                     </div>
                                                     <div
                                                         class="d-flex w-100 justify-content-between align-items-center ">
-                                                        <p class="mb-1">10 Hours</p>
+                                                        <p class="mb-1"> <strong>ETA </strong> 10 Hours</p>
                                                         <p class="mb-1">Translation</p>
                                                     </div>
                                                     <div class="d-flex w-100 justify-content-between">
