--- a/Customer/orders.html
+++ b/Customer/orders.html
@@ -84,9 +84,9 @@
                         <i class="fas fa-shopping-cart fa-2x mr-2"></i>
                         <span>Orders</span>
                     </a>
-                    <a href="finance.html" class="list-group-item list-group-item-action ">
+                    <a href="Finance.html" class="list-group-item list-group-item-action ">
                         <i class="fas fa-coins fa-2x mr-2"></i>
-                        <span>Finaice</span>
+                        <span>Finance</span>
                     </a>
                     <a href="account.html" class="list-group-item list-group-item-action ">
                         <i class="far fa-address-card fa-2x mr-2"></i>
@@ -104,7 +104,7 @@
                     <div class="col-12 col-md-6 col-lg-4 my-2">
                         <div
                             class="dropdown d-flex align-items-md-center align-items-start  justify-content-between flex-column flex-md-row">
-                            <span class="mr-4">Date</span>
+                            <span class="mr-4 text-nowrap">Sort by</span>
                             <button class="btn btn-secondary  dropdown-toggle flex-fill w-100" type="button" id="dropdownMenuButton"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Recent to Older
