--- a/provider/dashboad.html
+++ b/provider/dashboad.html
@@ -77,9 +77,9 @@
                         <i class="fas fa-shopping-cart fa-2x mr-2"></i>
                         <span>Orders</span>
                     </a>
-                    <a href="finance.html" class="list-group-item list-group-item-action ">
+                    <a href="Finance.html" class="list-group-item list-group-item-action ">
                         <i class="fas fa-coins fa-2x mr-2"></i>
-                        <span>Finaice</span>
+                        <span>Finance</span>
                     </a>
                     <a href="account.html" class="list-group-item list-group-item-action ">
                         <i class="far fa-address-card fa-2x mr-2"></i>
@@ -617,7 +617,7 @@
                             </ul>
 
                             <div class="mt-2  bg-white d-flex justify-content-end">
-                                <a class=" nz-text-gold" href="finance.html">Show All Invoices</a>
+                                <a class=" nz-text-gold" href="Finance.html">Show All Invoices</a>
                             </div>
                         </div>
                         <div class="col-12 col-lg-6">
