--- a/Customer/invoiceDetails.html
+++ b/Customer/invoiceDetails.html
@@ -84,9 +84,9 @@
                         <i class="fas fa-shopping-cart fa-2x mr-2"></i>
                         <span>Orders</span>
                     </a>
-                    <a href="finance.html" class="list-group-item list-group-item-action active">
+                    <a href="Finance.html" class="list-group-item list-group-item-action active">
                         <i class="fas fa-coins fa-2x mr-2"></i>
-                        <span>Finaice</span>
+                        <span>Finance</span>
                     </a>
                     <a href="account.html" class="list-group-item list-group-item-action ">
                         <i class="far fa-address-card fa-2x mr-2"></i>
